# DesignPatternsCpp

./: CMakeLists.txt  README.md  main.cpp
include/: patterns.h
src/: CMakeLists.txt
src/memento/: editor-history.cpp  editor-history.h  editor-state.cpp  editor-state.h  editor.cpp  editor.h  memento-demo.cpp  memento-demo.h
